2003-08-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/fpu/bits/mathinline.h: Define __signbitf,
	__signbit, and __signbitl inline functions.

	* sysdeps/unix/sysv/linux/x86_64/__start_context.S: Use
	HIDDEN_JUMPTARGET instead of JUMPTARGET to call exit().

	* sysdeps/x86_64/bsd-_setjmp.S [PIC]: Jump to __GI___sigsetjmp.
	* sysdeps/x86_64/setjmp.S: Add libc_hidden_def for __sigsetjmp.

2003-08-27  Jakub Jelinek  <jakub@redhat.com>

	* inet/inet_mkadr.c (inet_makeaddr): Optimize.

2003-08-27  Ulrich Drepper  <drepper@redhat.com>

	* include/stdio.h: Add declarations for __builtin_fwrite and
	__builtin_fwrite_unlocked.

2003-08-27  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/opendir.c (__opendir): Make sure even struct dirent64
	fits into allocation.  Add padding on 32-bit arches so that
	dirp->data is enough aligned for struct dirent64.
	Avoid clearing of the buffer, just clear DIR structure.

2003-08-26  Ulrich Drepper  <drepper@redhat.com>

	* nss/nsswitch.c: Add libc_hidden_def for __nss_lookup_function.
	* nss/nsswitch.h: Add libc_hidden_proto for __nss_lookup_function.

2003-08-26  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/powerpc64/elf/Makefile: New file.

2003-08-26  Jakub Jelinek  <jakub@redhat.com>

	* login/programs/utmpdump.c (print_entry): Cast tv_usec to long
	to match format string.
	* sysdeps/unix/sysv/linux/sparc/sparc32/semctl.c (union semun): Add
	__old_buf.
	(__new_semctl): Shut up warning.
	* sysdeps/unix/sysv/linux/sparc/sparc32/dl-procinfo.h
	(_dl_string_hwcap): Add __attribute__ ((always_inline)).

2003-08-26  Jakub Jelinek  <jakub@redhat.com>

	* elf/ldconfig.c (search_dir): When checking for GNU-style .so
	link file use the real file name, not the resolved name we got by
	following the symlinks.

2003-08-25  Ulrich Drepper  <drepper@redhat.com>

	* libio/oldfileops.c (_IO_old_file_init): Initialize _mode field
	if the object size is large enough.

2003-08-25  Jakub Jelinek  <jakub@redhat.com>
